--- a/.project/spec.yaml
+++ b/.project/spec.yaml
@@ -3,8 +3,7 @@ specMinorVersion: 1
 meta:
   name: covid-vaccinations-python
   image: covid-vaccinations-python
-  description: Covid vaccination python exploration
-    - Python no CUDA
+  description: Covid vaccination python exploration - Python no CUDA
   labels: []
   createdOn: "2024-06-05T11:30:16Z"
   defaultBranch: main
